# hypercube

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Containerfile  Dockerfile  Justfile  KEYBINDINGS-PROPOSAL.md  KEYBINDINGS.md  README.md  artifacthub-repo.yml  configuration.nix  flake.nix  home.nix  iso.nix
.github/workflows/: build-ai-dev.yml  build-copr-packages.yml  build-copr-pr.yml  build-devcube.yml  build-disk.yml  build-iso.yaml  build-iso.yml  build-nvim-dev.yml  build.yml  check-package-versions.yml  claude-test.yml  clear-cache.yml  copr-rebuild.yml  lint.yml
branding/: README.md
branding/plymouth/: generate-assets.sh
build_files/: 50-hypercube-plymouth.conf  60-hypercube-xdg.conf  build.sh  gdm-theme.sh
build_files/apps/: 01-apps.sh  02-gaming.sh
build_files/base/: 00-kernel-akmods.sh  01-base-system.sh
disk_config/: iso-nvidia.toml  iso-regular.toml
dot_files/: .dockerignore  mimeapps.list
dot_files/devcube/workbox/: Cargo.toml  README.md
dot_files/devcube/workbox/core/: Cargo.toml
dot_files/devcube/workbox/core/src/: lib.rs
dot_files/devcube/workbox/plugin/: Cargo.toml
dot_files/devcube/workbox/plugin/src/: main.rs
flatpaks/: system-flatpaks.list
home/: atuin.nix  bat.nix  bottom.nix  dunst.nix  eza.nix  fish.nix  fzf.nix  ghostty.nix  git.nix  hypridle.nix  hyprland.nix  hyprlock.nix  hyprpaper.nix  k9s.nix  lazygit.nix  less.nix  neovim.nix  packages.nix  readline.nix  starship.nix  tmux.nix  waybar.nix  wezterm.nix  wofi.nix  yazi.nix
iso_files/: configure_live_session.sh  hide_hyprland_session.sh  hook-post-rootfs.sh  livesys-hyprland
scripts/: README.md  test-all.sh
(+208 files in other folders)
